--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="library">Library</string>
     <string name="discover">Discover</string>
     <string name="profile">Profile</string>
-    <string name="last_added">Last added</string>
+    <string name="last_added">Latest additions</string>
 
     <string name="title_1">Cool card</string>
     <string name="title_2">Ok card</string>
