--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,17 @@
 <resources>
-    <string name="app_name">Readify</string>
+    <string name="app_name" translatable="false">Readify</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="reading">Reading</string>
     <string name="library">Library</string>
     <string name="discover">Discover</string>
     <string name="profile">Profile</string>
+    <string name="skip_first_form_message"><u>Skip the form</u></string>
+    <string name="description_first_form_text">To improve your experience in this application, we recommend that you waste a part of your time to make this form so that in the future, we can offer you the best book recommendations. This form is not mandatory.</string>
+    <string name="select_genres_first_form_title">Select your genres</string>
+    <string name="select_genres_first_form_text">First, you must select the genres of books that interest you.</string>
+    <string name="separator_text" translatable="false">Separator</string>
+    <string name="cardView_unmark" translatable="false">0</string>
+    <string name="cardView_mark" translatable="false">1</string>
 </resources>
