Search book functionality added

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -7,6 +7,7 @@
     <string name="profile">Perfil</string>
     <string name="last_added">Ultimos añadidos</string>
     <string name="top_rated">Mejor valorados</string>
+    <string name="search_bar">Descubre libros</string>
 
     <string name="title_1">Cool card</string>
     <string name="title_2">Ok card</string>
