--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="discover">Discover</string>
     <string name="profile">Profile</string>
     <string name="last_added">Latest additions</string>
+    <string name="search_bar">Discover books</string>
 
     <string name="title_1">Cool card</string>
     <string name="title_2">Ok card</string>
