Discover button added

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -19,4 +19,5 @@
     <string name="publication">PUBLICACIÓN</string>
     <string name="extension">EXTENSIÓN</string>
     <string name="paginas">Páginas</string>
+    <string name="discover_link"><u>Descubrir</u></string>
 </resources>
