Implemented a profile layout with banner, image profile, more information and favourite books

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -39,4 +39,9 @@
     <string name="reading_text_title">Leyendo</string>
     <string name="book_added_correctly_message"> se ha añadido correctamente a tu Libreria.</string>
     <string name="pending">Pendientes</string>
+    <string name="accountFreeText">Gratuita</string>
+    <string name="accountTitleProfile">ACCOUNT</string>
+    <string name="commentsFeedTitleProfile">comments</string>
+    <string name="libraryTitleProfile">LIBRARY</string>
+    <string name="readedbooksSubtitleProfile">readed books</string>
 </resources>
