--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -68,5 +68,7 @@
     <string name="wow_review">WOW</string>
 
     <string name="comments">Reviews</string>
+    <string name="cancel_upper_case">CANCELAR</string>
+
 
 </resources>
