--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,7 @@
     <string name="wow_review">WOW</string>
 
     <string name="comments">Reviews</string>
+    <string name="cancel_upper_case">CANCEL</string>
 
 
 </resources>
