Library fragment search bar & logic added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,7 @@
 
     <string name="comments">Reviews</string>
     <string name="cancel_upper_case">CANCEL</string>
+    <string name="search_book">Search book</string>
 
 
 </resources>
