--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -69,6 +69,7 @@
 
     <string name="comments">Reviews</string>
     <string name="cancel_upper_case">CANCELAR</string>
+    <string name="search_book">Buscar libro</string>
 
 
 </resources>
