--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,6 +78,7 @@
     <string name="comments">Reviews</string>
     <string name="cancel_upper_case">CANCEL</string>
     <string name="search_book">Search book</string>
+    <string name="add_comment">Add a comment</string>
 
 
 </resources>
