--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,6 +79,8 @@
     <string name="cancel_upper_case">CANCEL</string>
     <string name="search_book">Search book</string>
     <string name="add_comment">Add a comment</string>
+    <string name="fake_date">1st October</string>
+    <string name="fake_pages">Pages</string>
 
 
 </resources>
