--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -52,6 +52,7 @@
 
     <string name="feeling_sentecte">¿Cómo te sentiste?</string>
     <string name="rate_it_sentence">Púntualo!</string>
+    <string name="angry_emoji">ENFADADO</string>
     <string name="happy_emoji">CONTENTO</string>
     <string name="confused_emoji">COONFUNDIDO</string>
     <string name="sad_emoji">TRISTE</string>
@@ -69,6 +70,7 @@
 
     <string name="comments">Reviews</string>
     <string name="cancel_upper_case">CANCELAR</string>
+    <string name="accept_upper_case">ACEPTAR</string>
     <string name="search_book">Buscar libro</string>
     <string name="add_comment">Añade un comentario</string>
     <string name="fake_date">1 Octubre</string>
