--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
 
     <string name="rate_it_sentence">Rate it!</string>
     <string name="feeling_sentecte">How did you feel?</string>
+    <string name="angry_emoji">ANGRY</string>
     <string name="happy_emoji">HAPPY</string>
     <string name="confused_emoji">CONFUSED</string>
     <string name="sad_emoji">SAD</string>
@@ -77,6 +78,7 @@
 
     <string name="comments">Reviews</string>
     <string name="cancel_upper_case">CANCEL</string>
+    <string name="accept_upper_case">ACCEPT</string>
     <string name="search_book">Search book</string>
     <string name="add_comment">Add a comment</string>
     <string name="fake_date">1st October</string>
