--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,6 +83,8 @@
     <string name="add_comment">Add a comment</string>
     <string name="fake_date">1st October</string>
     <string name="fake_pages">Pages</string>
+    <string name="review_added_correctly">Your review was added correctly!</string>
+    <string name="comment_added_correctly">Your comment was added correctly!</string>
 
 
 </resources>
