--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -88,5 +88,7 @@
     <string name="done_text">Listo</string>
     <string name="upgrade_account_text">Mejorar cuenta</string>
     <string name="configuration_text">Configuración</string>
+    <string name="periodAccountText">logros</string>
+    <string name="feedbackTitleProfile">APORTAC.</string>
 
 </resources>
