--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="reading">Reading</string>
-    <string name="library">Library</string>
+    <string name="library">Bookshelf</string>
     <string name="discover">Discover</string>
     <string name="profile">Profile</string>
 
@@ -49,17 +49,17 @@
     <string name="pending">Pending</string>
     <string name="accountPremiumText" translatable="false">Premium</string>
     <string name="accountFreeText">Free</string>
-    <string name="typeAccountExampleText">10/100</string>
+    <string name="typeAccountExampleText" translatable="false">10/100</string>
     <string name="accountTitleProfile">PROGRESS</string>
     <string name="periodAccountText">achievements</string>
     <string name="feedbackTitleProfile">FEEDBACK</string>
-    <string name="numExample">103</string>
+    <string name="numExample" translatable="false">103</string>
     <string name="commentsFeedTitleProfile">comments</string>
     <string name="libraryTitleProfile">LIBRARY</string>
-    <string name="readedbooksSubtitleProfile">readed books</string>
-    <string name="readedBooksTitleProfile">Readed books</string>
+    <string name="readedbooksSubtitleProfile">books read</string>
+    <string name="readedBooksTitleProfile">Books read</string>
     <string name="genrePreferencesTitleProfile">Genre preferences</string>
-    <string name="diagonalBar">/</string>
+    <string name="diagonalBar" translatable="false">/</string>
     <string name="achievementsTitleProfile">Last achievements</string>
 
     <string name="biography_gender">Biography</string>
