Review Item options added

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -88,5 +88,7 @@
     <string name="done_text">Listo</string>
     <string name="upgrade_account_text">Mejorar cuenta</string>
     <string name="configuration_text">Configuración</string>
+    <string name="see_comments">Comentarios</string>
+    <string name="share">Compartir</string>
 
 </resources>
