Comments activity layout design changed

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -90,5 +90,6 @@
     <string name="configuration_text">Configuración</string>
     <string name="see_comments">Comentarios</string>
     <string name="share">Compartir</string>
+    <string name="publish_title">PUBLICAR</string>
 
 </resources>
