--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,5 +113,6 @@
     <string name="rate_example" translatable="false">4.4</string>
     <string name="upgrade_account_text">Upgrade account</string>
     <string name="configuration_text">Configuration</string>
+    <string name="publish_title">PUBLISH</string>
 
 </resources>
