--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -93,5 +93,6 @@
     <string name="feedbackTitleProfile">APORTAC.</string>
     <string name="any_book_yet">Todavía no has añadido ningún libro. Haz click en el botón para descubrir nuevos libros!</string>
     <string name="disconnect_text">Disconnect</string>
+    <string name="achievements_text">Achievements</string>
 
 </resources>
