--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,6 +115,8 @@
     <string name="upgrade_account_text">Upgrade account</string>
     <string name="configuration_text">Configuration</string>
 
+    <string name="euro_currency">€</string>
+
     <string name="publish_title">PUBLISH</string>
     <string name="delete">Delete Comment</string>
     <string name="delete_comment_alert_dialog">Are you sure you want to delete the comment ?</string>
