--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="done_first_form_title">Thank you!</string>
     <string name="done_first_form_text">Finally, we have correctly configured your library and have optimized your searches based on the options that you have chosen. These options can be modified in the future if you wish.</string>
     <string name="done_redirect_first_form_text">To start using the application, press "done" for the changes to take effect.</string>
-
+    <string name="done_end">Done</string>
     <string name="last_added">Latest additions</string>
     <string name="search_bar">Discover books</string>
 
