change design about discover layout and search books

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="done_redirect_first_form_text">To start using the application, press "done" for the changes to take effect.</string>
 
     <string name="last_added">Latest additions</string>
-    <string name="search_bar">Discover books</string>
+    <string name="search_bar">Search by book title or users</string>
 
     <string name="title_1">Cool card</string>
     <string name="title_2">Ok card</string>
