--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,7 +94,7 @@
     <string name="comments">Reviews</string>
     <string name="cancel_upper_case">CANCEL</string>
     <string name="accept_upper_case">ACCEPT</string>
-    <string name="search_book">Search book</string>
+    <string name="search_book">by title</string>
     <string name="add_comment">Add a comment</string>
     <string name="see_comments">Comments</string>
     <string name="share">Share</string>
