--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,4 +141,8 @@
     <string name="firebase_status_fmt">Firebase User: %s</string>
     <string name="disconnect_text">Disconnect</string>
     <string name="achievements_text">Achievements</string>
+
+    <string name="wifi_ok" translatable="false">wifi_ok</string>
+    <string name="mobile_ok" translatable="false">mobile_ok</string>
+    <string name="internet_ko" translatable="false">internet_ko</string>
 </resources>
