--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,5 +150,5 @@
     <string name="internet_ko" translatable="false">internet_ko</string>
 
     <string name="client_id_paypal" translatable="false">ASOBY-QQvBf_kxLtW8pzZo0e7Giaj34a5ECUYzo8WBitAGQoo1HT0YBfDCYU2xe6TxBtUQj5qFRHXm7v</string>
-
+    <string name="any_comment_yet">Any comment yet!</string>
 </resources>
